<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_prod">NITC Wiki</string>
    <string name="app_name_beta" tools:ignore="UnusedResources">NITC Wiki Beta</string>
    <string name="app_name_alpha" tools:ignore="UnusedResources">NITC Wiki Alpha</string>
    <string name="app_name_caps"><font size="20">N</font>ITC WIK<font size="20">I</font></string>
    <string name="wikimedia">Wikimedia</string>
    <string name="nitcwiki">NITC Wiki</string>
    <string name="nav_item_back">Back</string>
    <string name="page_tabs_back">Back</string>
    <string name="nav_item_forward">Forward</string>
    <string name="search_hint">Search NITC Wiki</string>
    <string name="search_hint_voice_search">Voice input search</string>
    <string name="search_hint_search_languages">Search for a language</string>
    <string name="filter_hint_filter_my_lists_and_articles">Filter my lists</string>
    <string name="nav_item_suggested_edits">Edits</string>
    <string name="nav_item_more">More</string>
    <string name="nav_item_search">Search</string>
    <string name="error_network_error">Cannot connect to the Internet.</string>
    <string name="page_error_retry">Retry</string>
    <string name="card_offline_error_retry">Retry</string>
    <string name="storage_access_error_retry">Retry</string>
    <string name="article_load_error_retry">Retry</string>
    <string name="offline_load_error_retry">Retry</string>
    <string name="page_error_back_to_main">Go back</string>
    <string name="error_back">Go back</string>
    <string name="error_next">Next</string>
    <string name="menu_clear_all_history">Clear history</string>
    <string name="history_item_deleted">%s removed from history</string>
    <string name="history_items_deleted">%d articles removed from history</string>
    <string name="history_item_delete_undo">Undo</string>
    <string name="notification_archive_undo">Undo</string>
    <string name="app_settings">App settings</string>
    <string name="search_tab_tooltip">Tap the icon again to directly start typing a search term.</string>
    <string name="history_list_title">History</string>
    <string name="image_content_description">Image: %s</string>
    <string name="page_content_description">Page: %s</string>
    <string name="wikimedia_commons">Wikimedia Commons</string>
    <string name="wikidata">Wikidata</string>
    <string name="dialog_title_clear_history">Clear browsing history</string>
    <string name="dialog_message_clear_history">This will delete all of your browsing history, and close any currently open tabs. Are you sure?</string>
    <string name="dialog_message_clear_history_yes">Yes</string>
    <string name="dialog_message_clear_history_no">No</string>
    <string name="share_via">Share via</string>
    <string name="image_share_via">Share via</string>
    <string name="search_redirect_from">Redirected from %s</string>
    <string name="page_edit_history_activity_title">Revision history: %s</string>
    <string name="page_edit_history_minor_edit"><![CDATA[<b>m</b> %s]]></string>
    <string name="page_edit_history_comment_placeholder">Empty edit summary</string>
    <string name="page_edit_history_search_or_filter_edits_hint">Search or filter edits</string>
    <string name="page_edit_history_filter_by">Filter by</string>
    <string name="page_edit_history_filter_by_all">All edits (%s)</string>
    <string name="page_edit_history_filter_by_user">User edits (%s)</string>
    <string name="page_edit_history_filter_by_anon">Anon edits (%s)</string>
    <string name="page_edit_history_filter_by_bot">Bot edits (%s)</string>
    <string name="page_edit_history_metrics_content_description">Metrics from %1$s to %2$s</string>
    <plurals name="page_edit_history_article_edits_since_year">
        <item quantity="one">%1$d edit since %2$s</item>
        <item quantity="other">%1$d edits since %2$s</item>
    </plurals>
    <plurals name="edits_since_year_per_wiki">
        <item quantity="one">%1$d edit since %2$s (%3$s)</item>
        <item quantity="other">%1$d edits since %2$s (%3$s)</item>
    </plurals>
    <string name="page_edit_history_empty_search_message"><![CDATA[Try changing <a href="#">filters</a> to see more edits]]></string>
    <string name="menu_page_show_tabs">Show tabs</string>
    <string name="menu_page_other_languages">Change language</string>
    <string name="menu_page_find_in_page">Find in article</string>
    <string name="menu_page_add_to_watchlist">Add to Watchlist</string>
    <string name="menu_page_watch">Watch</string>
    <string name="menu_page_unwatch">Unwatch</string>
    <string name="menu_page_view_talk">View talk page</string>
    <string name="menu_page_talk_page">Talk page</string>
    <string name="menu_page_view_edit_history">View edit history</string>
    <string name="menu_page_edit_history">Edit history</string>
    <string name="menu_page_remove_from_watchlist">Remove from Watchlist</string>
    <string name="menu_page_watched">Watched</string>
    <string name="edit_section_find_in_page">Find in page</string>
    <string name="menu_page_font_and_theme">Font and theme</string>
    <string name="menu_page_add_to_list">Add to reading list</string>
    <string name="menu_page_add_to_default_list">Save</string>
    <string name="feed_card_add_to_list">Add to reading list</string>
    <string name="feed_card_add_to_default_list">Save</string>
    <string name="menu_page_share">Share link</string>
    <string name="menu_article_share">Share article</string>
    <string name="menu_page_article_share">Share</string>
    <string name="menu_page_open_a_new_tab">Open a new tab</string>
    <string name="menu_page_new_tab">New tab</string>
    <string name="menu_page_reading_lists">Reading lists</string>
    <string name="menu_page_recently_viewed">Recently viewed</string>
    <string name="menu_page_archive">Archive</string>
    <string name="menu_long_press_open_page">Open</string>
    <string name="menu_long_press_open_in_new_tab">Open in new tab</string>
    <string name="menu_long_press_copy_page">Copy link address</string>
    <string name="menu_text_select_define">Define</string>
    <string name="on_this_day_page_share">Share</string>
    <string name="reading_list_page_share">Share</string>
    <string name="menu_text_select_edit_here">Edit here</string>
    <string name="menu_edit_article">Edit article</string>
    <string name="last_updated_text">Last updated %s</string>
    <string name="talk_page_link_text">View talk page</string>
    <string name="edit_history_link_text">View edit history</string>
    <string name="map_view_link_text">View on a map</string>
    <string name="other_languages_indication_text">Read in another language</string>
    <string name="language_count_link_text">Available in %d other languages</string>
    <string name="content_license_cc_by_sa">CC BY-SA 4.0</string>
    <string name="edit_save_action_license_logged_in"><![CDATA[By publishing, you agree to the <a href="%1$s">Terms of Use</a>, and to irrevocably release your contributions under the <a href="%2$s">CC BY-SA 4.0</a> license.]]></string>
    <string name="edit_save_action_license_anon"><![CDATA[By publishing, you agree to the <a href="%1$s">Terms of Use</a>, and to irrevocably release your contributions under the <a href="%2$s/">CC BY-SA 4.0</a> license. Edits will be attributed to the IP address of your device. If you <a href="https://#login">log in</a>, you will have more privacy.]]></string>
    <string name="edit_anon_warning"><![CDATA[Edits will be attributed to the IP address of your device. If you <a href="https://#login">log in</a>, you will have more privacy.]]></string>
    <string name="preference_title_language">NITC Wiki languages</string>
    <string name="langlinks_filter_hint">Search</string>
    <string name="langlinks_empty">This page is not available in other languages.</string>
    <string name="langlinks_no_match">No languages found</string>
    <string name="langlinks_activity_title">Other languages</string>
    <string name="langlinks_your_wikipedia_languages">Your NITC Wiki languages</string>
    <string name="menu_save_changes">Publish changes</string>
    <string name="edit_saved_successfully">Edit published!</string>
    <string name="stub_article_edit_saved_successfully">Edit published! Changes may take time to appear.</string>
    <string name="dialog_message_edit_failed">Edit failed!</string>
    <string name="dialog_message_edit_failed_retry">Retry</string>
    <string name="dialog_message_edit_failed_cancel">Cancel</string>
    <string name="dialog_message_leaving_edit">Your changes have not been published yet. Are you sure you want to leave this page?</string>
    <string name="dialog_message_leaving_edit_leave">Leave</string>
    <string name="dialog_message_leaving_edit_stay">Stay</string>
    <string name="menu_show_toc">Table of Contents</string>
    <string name="search_no_results_found">No results found</string>
    <string name="search_reading_list_no_results">No results found in \"%s\"</string>
    <string name="search_reading_lists_no_results">No results found in reading lists</string>
    <string name="search_history_no_results">No results found in history</string>
    <string name="edit_section_captcha_message">To help protect against automated spam, please enter the words that appear below</string>
    <string name="edit_section_captcha_request_an_account_message"><![CDATA[Can\'t see the image? <a href="https://en.wikipedia.org/wiki/NITC Wiki:Request_an_account">Request an account</a>]]></string>
    <string name="edit_section_captcha_hint">Repeat words from above</string>
    <string name="title_captcha">Enter CAPTCHA</string>
    <string name="edit_section_captcha_reload">Tap CAPTCHA to reload</string>
    <string name="nav_item_login">Log in to NITC Wiki</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="account_creation_password_hint">Password</string>
    <string name="login_2fa_hint">Two-Factor Authentication Code</string>
    <string name="login_2fa_other_workflow_error_msg">Two-factor authentication required! Please return to the main activity and log in with your 2FA token, then retry.</string>
    <string name="onboarding_card_login">Log in</string>
    <string name="page_editing_login">Log in</string>
    <string name="reading_lists_sync_login">Log in</string>
    <string name="create_account_login">Log in</string>
    <string name="menu_login">Log in</string>
    <string name="login_activity_title">Log in</string>
    <string name="login_in_progress_dialog_message">Logging you in…</string>
    <string name="login_success_toast">Logged in!</string>
    <string name="reset_password_title">Set your password</string>
    <string name="reset_password_description">You logged in with a temporary password. To finish logging in, please set your new password here.</string>
    <string name="reset_password_hint">New password</string>
    <string name="reset_password_button">Save and log in</string>
    <string name="preference_title_logout">Log out</string>
    <string name="toast_logout_complete">Logged out</string>
    <string name="logout_prompt">This will log you out on all devices where you are currently logged in. Do you want to continue?</string>
    <string name="logout_dialog_cancel_button_text">Cancel</string>
    <string name="wikipedia_app_faq">NITC Wiki App FAQ</string>
    <string name="about_description">About the NITC Wiki app</string>
    <string name="privacy_policy_description">Privacy policy</string>
    <string name="terms_of_use_description">Terms of use</string>
    <string name="privacy_policy_url">https://foundation.wikimedia.org/wiki/Privacy_policy</string>
    <string name="terms_of_use_url">https://foundation.wikimedia.org/wiki/Terms_of_Use</string>
    <string name="about_activity_title">About</string>
</resources>